unpackaged/main/default/objects/Race__c/Race__c.object-meta.xml
<CustomObject>
    <label>Race</label>
    <nameField>
        <label>Race Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Races</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>