unpackaged/main/default/objects/Race__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Time and Date</label>
    <type>DateTime</type>
</CustomField>