unpackaged/main/default/objects/Race__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Race Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10k</fullName>
            </value>
            <value>
                <fullName>5k</fullName>
            </value>
            <value>
                <fullName>Full Marathon</fullName>
            </value>
            <value>
                <fullName>Half Marathon</fullName>
            </value>
            <value>
                <fullName>Ultra Marathon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>